Refactor Todolist application to use Deque for history management, enhance input sanitization, and improve GUI initialization with SwingUtilities