@@ -4,12 +4,22 @@
 
 package todolist;
 
-import javax.swing.*;
-import java.awt.*;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-import java.util.ArrayList;
-import java.util.Stack;
+import java.awt.BorderLayout;
+import java.awt.Color;
+import java.awt.Font;
+import java.util.ArrayDeque;
+import java.util.Deque;
+
+import javax.swing.DefaultComboBoxModel;
+import javax.swing.DefaultListModel;
+import javax.swing.JButton;
+import javax.swing.JComboBox;
+import javax.swing.JFrame;
+import javax.swing.JList;
+import javax.swing.JOptionPane;
+import javax.swing.JPanel;
+import javax.swing.JScrollPane;
+import javax.swing.SwingUtilities;
 
 /**
  * A simple To-Do List application with GUI.
@@ -22,7 +32,7 @@ public class Todolist {
     private static JFrame frame;
     private static DefaultListModel<String> listModel;
     private static JList<String> todoList;
-    private static Stack<String> history;
+    private static Deque<String> history;
     private static JComboBox<String> groupComboBox;
     private static DefaultComboBoxModel<String> groupModel;
 
@@ -32,40 +42,37 @@ public class Todolist {
      * @param args the command line arguments
      */
     public static void main(String[] args) {
-        frame = new JFrame("To-Do List App");
-        frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
-        frame.setSize(400, 300);
+        SwingUtilities.invokeLater(() -> {
+            frame = new JFrame("To-Do List App");
+            frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+            frame.setSize(400, 300);
 
-        listModel = new DefaultListModel<>();
-        todoList = new JList<>(listModel);
-        history = new Stack<>();
-        groupModel = new DefaultComboBoxModel<>();
-        groupComboBox = new JComboBox<>(groupModel);
-        groupModel.addElement("Default");
+            listModel = new DefaultListModel<>();
+            todoList = new JList<>(listModel);
+            history = new ArrayDeque<>();
+            groupModel = new DefaultComboBoxModel<>();
+            groupComboBox = new JComboBox<>(groupModel);
+            groupModel.addElement("Default");
 
-        JPanel panel = new JPanel();
-        panel.setLayout(new BorderLayout());
-        panel.setBackground(Color.LIGHT_GRAY); // Set background color
+            JPanel panel = new JPanel();
+            panel.setLayout(new BorderLayout());
+            panel.setBackground(Color.LIGHT_GRAY); // Set background color
 
-        JButton addButton = new JButton("Add To-Do List");
-        addButton.setToolTipText("Click to add a new to-do list item"); // Add tooltip
-        addButton.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
+            JButton addButton = new JButton("Add To-Do List");
+            addButton.setToolTipText("Click to add a new to-do list item"); // Add tooltip
+            addButton.addActionListener(e -> {
                 String name = JOptionPane.showInputDialog(frame, "Enter To-Do List Name:");
                 if (name != null && !name.trim().isEmpty()) {
+                    String sanitizedInput = sanitizeInput(name);
                     String group = (String) groupComboBox.getSelectedItem();
-                    listModel.addElement(group + ": " + name);
-                    addToHistory("Added: " + name + " to group " + group);
+                    listModel.addElement(group + ": " + sanitizedInput);
+                    addToHistory("Added: " + sanitizedInput + " to group " + group);
                 }
-            }
-        });
+            });
 
-        JButton checkButton = new JButton("Check/Uncheck");
-        checkButton.setToolTipText("Click to check/uncheck the selected item"); // Add tooltip
-        checkButton.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
+            JButton checkButton = new JButton("Check/Uncheck");
+            checkButton.setToolTipText("Click to check/uncheck the selected item"); // Add tooltip
+            checkButton.addActionListener(e -> {
                 int index = todoList.getSelectedIndex();
                 if (index != -1) {
                     String item = listModel.getElementAt(index);
@@ -78,37 +85,32 @@ public class Todolist {
                     }
                     listModel.set(index, item);
                 }
-            }
-        });
+            });
 
-        JPanel topPanel = new JPanel();
-        topPanel.setLayout(new BorderLayout());
-        topPanel.setBackground(Color.DARK_GRAY); // Set background color
-        topPanel.add(addButton, BorderLayout.WEST);
-        topPanel.add(groupComboBox, BorderLayout.EAST);
+            JPanel topPanel = new JPanel();
+            topPanel.setLayout(new BorderLayout());
+            topPanel.setBackground(Color.DARK_GRAY); // Set background color
+            topPanel.add(addButton, BorderLayout.WEST);
+            topPanel.add(groupComboBox, BorderLayout.EAST);
 
-        JButton addGroupButton = new JButton("Add Group");
-        addGroupButton.setToolTipText("Click to add a new group"); // Add tooltip
-        addGroupButton.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
+            JButton addGroupButton = new JButton("Add Group");
+            addGroupButton.setToolTipText("Click to add a new group"); // Add tooltip
+            addGroupButton.addActionListener(e -> {
                 String groupName = JOptionPane.showInputDialog(frame, "Enter Group Name:");
                 if (groupName != null && !groupName.trim().isEmpty()) {
-                    groupModel.addElement(groupName);
+                    String sanitizedGroupName = sanitizeInput(groupName);
+                    groupModel.addElement(sanitizedGroupName);
                 }
-            }
-        });
-        topPanel.add(addGroupButton, BorderLayout.CENTER);
+            });
+            topPanel.add(addGroupButton, BorderLayout.CENTER);
 
-        panel.add(topPanel, BorderLayout.NORTH);
-        todoList.setFont(new Font("Arial", Font.PLAIN, 14)); // Set font for to-do list items
-        panel.add(new JScrollPane(todoList), BorderLayout.CENTER);
+            panel.add(topPanel, BorderLayout.NORTH);
+            todoList.setFont(new Font("Arial", Font.PLAIN, 14)); // Set font for to-do list items
+            panel.add(new JScrollPane(todoList), BorderLayout.CENTER);
 
-        JButton deleteButton = new JButton("Delete Selected");
-        deleteButton.setToolTipText("Click to delete the selected item or group"); // Add tooltip
-        deleteButton.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
+            JButton deleteButton = new JButton("Delete Selected");
+            deleteButton.setToolTipText("Click to delete the selected item or group"); // Add tooltip
+            deleteButton.addActionListener(e -> {
                 int[] selectedIndices = todoList.getSelectedIndices();
                 if (selectedIndices.length > 0) {
                     for (int i = selectedIndices.length - 1; i >= 0; i--) {
@@ -128,32 +130,29 @@ public class Todolist {
                         addToHistory("Deleted group: " + selectedGroup);
                     }
                 }
-            }
-        });
+            });
 
-        JButton clearButton = new JButton("Clear");
-        clearButton.setToolTipText("Click to clear all items and groups"); // Add tooltip
-        clearButton.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
+            JButton clearButton = new JButton("Clear");
+            clearButton.setToolTipText("Click to clear all items and groups"); // Add tooltip
+            clearButton.addActionListener(e -> {
                 listModel.clear();
                 groupModel.removeAllElements();
                 groupModel.addElement("Default");
                 addToHistory("Cleared all items and groups");
-            }
+            });
+
+            JPanel bottomPanel = new JPanel();
+            bottomPanel.setLayout(new BorderLayout());
+            bottomPanel.setBackground(Color.DARK_GRAY); // Set background color
+            bottomPanel.add(checkButton, BorderLayout.WEST);
+            bottomPanel.add(clearButton, BorderLayout.CENTER); // Add clear button in the middle
+            bottomPanel.add(deleteButton, BorderLayout.EAST);
+
+            panel.add(bottomPanel, BorderLayout.SOUTH);
+
+            frame.add(panel);
+            frame.setVisible(true);
         });
-
-        JPanel bottomPanel = new JPanel();
-        bottomPanel.setLayout(new BorderLayout());
-        bottomPanel.setBackground(Color.DARK_GRAY); // Set background color
-        bottomPanel.add(checkButton, BorderLayout.WEST);
-        bottomPanel.add(clearButton, BorderLayout.CENTER); // Add clear button in the middle
-        bottomPanel.add(deleteButton, BorderLayout.EAST);
-
-        panel.add(bottomPanel, BorderLayout.SOUTH);
-
-        frame.add(panel);
-        frame.setVisible(true);
     }
 
     /**
@@ -164,8 +163,12 @@ public class Todolist {
      */
     private static void addToHistory(String action) {
         if (history.size() == 5) {
-            history.remove(0);
+            history.removeFirst();
         }
-        history.push(action);
+        history.addLast(action);
+    }
+
+    private static String sanitizeInput(String input) {
+        return input.replaceAll("[^a-zA-Z0-9\\s]", "").trim();
     }
 }
